--- a/nicepage.css
+++ b/nicepage.css
@@ -46215,43 +46215,46 @@ a.u-link.u-text-hover-color-var:hover {
 }
 
 .u-header .u-sheet-1 {
-  min-height: 80px;
+  min-height: 130px;
 }
 
 .u-header .u-image-1 {
-  width: 64px;
-  height: 32px;
-  margin: 22px auto 0 0;
+  width: 380px;
+  height: 380px;
+  margin: -94px auto -155px -36px;
 }
 
 .u-header .u-logo-image-1 {
   width: 100%;
   height: 100%;
 }
-
-.u-header .u-menu-1 {
-  margin: -32px 0 22px auto;
-}
-
-.u-header .u-nav-1 {
-  font-size: 1rem;
-}
-
-.u-header .u-nav-2 {
-  font-size: 1.25rem;
-}
 @media (max-width: 1199px) {
-  .u-header .u-menu-1 {
-    width: auto;
-  }
-
-  .u-header .u-nav-1 {
-    letter-spacing: normal;
+  .u-header .u-image-1 {
+    width: 380px;
+    margin-top: -65px;
+    margin-bottom: -8px;
+    margin-left: 70px;
   }
 }
-
-
-
+@media (max-width: 991px) {
+  .u-header .u-image-1 {
+    margin-top: -69px;
+    margin-bottom: 8px;
+    margin-left: 180px;
+  }
+}
+@media (max-width: 767px) {
+  .u-header .u-image-1 {
+    margin-top: -65px;
+    margin-bottom: -8px;
+    margin-left: 270px;
+  }
+}
+@media (max-width: 575px) {
+  .u-header .u-image-1 {
+    margin-left: 370px;
+  }
+}
  .u-footer {
   background-image: none;
 }
