--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
  .u-section-1 {
-  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('images/r-min.jpg');
-  background-position: 50% 50%, 50% 50%;
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('images/Amy_Harrill_bg1_2000_1125.webp');
+  background-position: 50% 50%, 1.69% 50%;
   background-size: cover, cover;
 }
 
