--- a/nicepage.css
+++ b/nicepage.css
@@ -46215,13 +46215,13 @@ a.u-link.u-text-hover-color-var:hover {
 }
 
 .u-header .u-sheet-1 {
-  min-height: 130px;
+  min-height: 175px;
 }
 
 .u-header .u-image-1 {
-  width: 380px;
-  height: 380px;
-  margin: -94px auto -155px -36px;
+  width: 175px;
+  height: 175px;
+  margin: 0 auto 0 0;
 }
 
 .u-header .u-logo-image-1 {
@@ -46230,7 +46230,6 @@ a.u-link.u-text-hover-color-var:hover {
 }
 @media (max-width: 1199px) {
   .u-header .u-image-1 {
-    width: 380px;
     margin-top: -65px;
     margin-bottom: -8px;
     margin-left: 70px;
