--- a/nicepage.css
+++ b/nicepage.css
@@ -46215,13 +46215,13 @@ a.u-link.u-text-hover-color-var:hover {
 }
 
 .u-header .u-sheet-1 {
-  min-height: 175px;
+  min-height: 176px;
 }
 
 .u-header .u-image-1 {
-  width: 152px;
-  height: 152px;
-  margin: 12px auto 12px 0;
+  width: 167px;
+  height: 167px;
+  margin: 51px auto -42px 49px;
 }
 
 .u-header .u-logo-image-1 {
@@ -46230,7 +46230,7 @@ a.u-link.u-text-hover-color-var:hover {
 }
 @media (max-width: 1199px) {
   .u-header .u-image-1 {
-    width: 152px;
+    width: 167px;
     margin-top: -65px;
     margin-bottom: -8px;
     margin-left: 170px;
